# actix-4-jwt-auth

./: Cargo.toml  LICENSE  README.md  private_key.der
.circleci/: config.yml
.github/: dependabot.yml
src/: error.rs  extractor.rs  lib.rs  middleware.rs  oidc.rs
src/extractor/: auth_user.rs  decoded_info.rs  mod.rs
tests/: common.rs  extractor-test.rs
