[package]
authors = ["Olger Warnier <olger@spectare.nl>"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
]
description = "OIDC authentication extractor for Actix 4"
edition = "2021"
keywords = ["actix", "http", "web", "cryptography"]
license = "MIT"
name = "actix-4-jwt-auth"
repository = "https://github.com/spectare/actix-4-jwt-auth"
version = "1.0.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
actix-web = { version="4.2.1", features=["rustls"]}
biscuit = "0.6.0-beta1"
futures = "0.3.25"
futures-core = {version = "0.3.25", default-features = false, features = ["alloc"]}
futures-util = {version = "0.3.25", default-features = false, features = ["alloc"]}
awc = { version="3.0.1", features=["rustls"] }
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
thiserror = "1.0.38"

[dev-dependencies]
pretty_assertions= "1.3.0"
actix-rt = "2.7.0"
bytes = "1.3.0"
ring = "~0.17.3"
num = "0.4"
